# bincv

./: .gitignore  README.md
bincv-cpp/: CMakeLists.txt  README.md
bincv-cpp/include/bincv-cpp/: binMat.hpp  util.hpp
bincv-cpp/src/: binMat.cpp  util.cpp
bincv-cpp/tests/: CMakeLists.txt  test_opencv_conv.cpp
bincv-cuda/: CMakeLists.txt  README.md
bincv-cuda/include/bincv-cuda/: edge_filter.hpp  util.hpp
bincv-cuda/src/: edge_filter.cu  util.cu
bincv-cuda/tests/: CMakeLists.txt  test_edge_filter.cpp
